<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.branchx.agent.ui.viewmodel.auth.ChangePasswordViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_bg">



        <ScrollView
            android:id="@+id/sv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/btn_change_pin">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/grey_bg"
                        android:orientation="vertical">


                        <soup.neumorphism.NeumorphCardView
                            android:id="@+id/card_view_password_otp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            app:cardCornerRadius="5dp"
                            app:contentPadding="16dp"
                            android:backgroundTint="@color/grey_bg"
                            app:layout_constraintTop_toTopOf="parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <com.google.android.material.textfield.TextInputLayout

                                    android:id="@+id/til_password"
                                    style="@style/AppTextInputLayout">

                                    <com.google.android.material.textfield.TextInputEditText
                                        style="@style/EditTextPrimary"
                                        android:background="@android:color/transparent"
                                        android:hint="Current Password"
                                        android:maxLength="15"
                                        android:text="@={viewModel.currentPassword}" />

                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/til_new_password"
                                    style="@style/AppTextInputLayout"
                                    android:layout_marginTop="8dp"
                                    app:passwordToggleEnabled="true">

                                    <com.google.android.material.textfield.TextInputEditText
                                        style="@style/EditTextPrimary"
                                        android:background="@android:color/transparent"
                                        android:hint="@string/new_password"
                                        android:maxLength="15"
                                        android:text="@={viewModel.newPassword}" />

                                </com.google.android.material.textfield.TextInputLayout>


                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/til_confirm_password"
                                    style="@style/AppTextInputLayout"
                                    android:layout_marginTop="8dp"
                                    app:passwordToggleEnabled="true">

                                    <com.google.android.material.textfield.TextInputEditText
                                        style="@style/EditTextPrimary"
                                        android:background="@android:color/transparent"
                                        android:hint="@string/confirm_password"
                                        android:maxLength="15"
                                        android:text="@={viewModel.confirmPassword}" />

                                </com.google.android.material.textfield.TextInputLayout>

                            </LinearLayout>


                        </soup.neumorphism.NeumorphCardView>

                        <soup.neumorphism.NeumorphCardView
                            android:id="@+id/card_view_note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="12dp"
                            app:cardCornerRadius="5dp"
                            app:contentPadding="16dp"
                            android:backgroundTint="@color/grey_bg"
                            app:layout_constraintTop_toTopOf="parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:background="@color/grey_bg"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TextAppearance.AppCompat.Medium"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/noto_sans_regular"
                                    android:textSize="14dp"
                                    android:textColor="@color/primaryTextColor"
                                    android:text="@string/password_rules" />

                                <TextView
                                    style="@style/TextAppearance.AppCompat.Caption"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:fontFamily="@font/noto_sans_regular"
                                    android:textSize="14dp"
                                    android:textColor="@color/primaryTextColor"
                                    android:text="1. One Caps letter (e.g. ABC...Z)" />


                                <TextView
                                    style="@style/TextAppearance.AppCompat.Caption"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:fontFamily="@font/noto_sans_regular"
                                    android:textSize="14dp"
                                    android:textColor="@color/primaryTextColor"
                                    android:text="2. One Number(e.g. 12...3)" />

                                <TextView
                                    style="@style/TextAppearance.AppCompat.Caption"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:fontFamily="@font/noto_sans_regular"
                                    android:textSize="14dp"
                                    android:textColor="@color/primaryTextColor"
                                    android:text="3. One small letter(e.g. abc...z)" />

                                <TextView
                                    style="@style/TextAppearance.AppCompat.Caption"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:fontFamily="@font/noto_sans_regular"
                                    android:textSize="14dp"
                                    android:textColor="@color/primaryTextColor"
                                    android:text="4. One special characters (e.g. #,@,$,&amp;,*,)" />

                                <TextView
                                    style="@style/TextAppearance.AppCompat.Caption"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:fontFamily="@font/noto_sans_regular"
                                    android:textSize="14dp"
                                    android:textColor="@color/primaryTextColor"
                                    android:text="5. Password length should be 8 characters long" />

                                <TextView
                                    style="@style/TextAppearance.AppCompat.Caption"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:fontFamily="@font/noto_sans_regular"
                                    android:textSize="14dp"
                                    android:textColor="@color/primaryTextColor"
                                    android:text="6. e.g. India#1947" />

                            </LinearLayout>


                        </soup.neumorphism.NeumorphCardView>

                    </LinearLayout>


                </androidx.core.widget.NestedScrollView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_change_pin"
                    style="@style/ButtonPrimary"
                    android:layout_alignParentBottom="true"
                    android:text="@string/proceed"
                    android:backgroundTint="@color/button_bg"
                    android:background="@drawable/rounded_background"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cornerRadius="0dp" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>